# heavy-detail

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  sessions.md  tsconfig.json  vite.config.ts  vitest.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: Dashboard.test.tsx  Dashboard.tsx  DatePicker.test.tsx  DatePicker.tsx  GoalCard.test.tsx  GoalCard.tsx  Nav.test.tsx  Nav.tsx  TrendCard.test.tsx  TrendCard.tsx  WeightForm.test.tsx  WeightForm.tsx  WeightHistory.test.tsx  WeightHistory.tsx
src/lib/: analytics.test.ts  analytics.ts  db.ts  queryKeys.ts  utils.test.ts  weightApi.ts
src/test/: helpers.ts
